Bug 1673158 - Ensure there is an imap capability UTF8=ACCEPT before enabling it. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D169966

--HG--
extra : rebase_source : 39d80bca4491eff9c5dc63bfb793c4950c92c330